# bgen_reader

./: .gitignore  Cargo.toml  README.md
benchmark/: benchmark_list.sh  benchmark_qctool.sh  bgenix
data_test/: 100.sample  samp_100_var_100.bgen  samp_100_var_100.sample
src/: bgen.rs  bgi_writer.rs  lib.rs  main.rs  parser.rs  variant_data.rs  vcf_writer.rs
src/bgen/: bgen_stream.rs  bgi_writer.rs  header.rs  mod.rs  utils.rs  variant_data.rs
tests/: list_variants.rs  merge_bgen.rs  read_header.rs  write_bgen.rs
