[package]
name = "bgen_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
clap = { version = "4.5.1", features = ["derive"] }
color-eyre = "0.6.2"
flate2 = "1.0.28"
itertools = "0.12.1"
rayon = "1.10.0"
rusqlite = "0.31.0"
vcf = "0.6.1"

[profile.release]
debug = true
