[package]
name = "bgen_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
clap = { version = "4.5.1", features = ["derive"] }
color-eyre = "0.6.2"
env_logger = "0.11.3"
flate2 = "1.0.28"
itertools = "0.12.1"
log = "0.4.21"
numtoa = "0.2.4"
ryu = "1.0.17"
sqlite = "0.34.0"

[profile.release]
debug = true
